[tool.poetry]
name = "python-exercises"
version = "0.1.0"
description = "Some python excercises for understand concepts"
authors = ["sdecandelario <sergio.decandelario@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
